[Material][Mac] Change the default value of material-security-verbose

Change it so that it'll match the current default value for Views, which
is "Show all, animated"

BUG=649682

Review-Url: https://codereview.chromium.org/2394793003
Cr-Commit-Position: refs/heads/master@{#423298}

Former-commit-id: 8434b579f8ececab58243e97b1ab758b671cccd0